finish simple recommendation sytem and filter search
