# internal/model/filter_search_model.go
@@ -1,10 +1,11 @@
 package model
 
 type FilterSearch struct {
-	ID     uint
-	UserID uint
-	MinAge uint
-	MaxAge uint
-	Sex    string
-	User   User `gorm:"foreignkey:UserID"`
+	ID       uint `gorm:"primary_key"`
+	UserID   uint
+	MinAge   uint
+	MaxAge   uint
+	SexID    uint
+	Location string
+	User     User `gorm:"foreignkey:UserID"`
 }
